--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -5,50 +5,29 @@ hr {
 .rodapé {
   background-color: var(--branco);
   padding: 1em;
+  text-align: center;
 }
 
-.lista-rodapé {
-  display: none;
+.logohugo {
+  background: url("../../../assets/HByHugo.svg")no-repeat center;
+  width: 50px;
+  height: 50px;
 }
 
+.copyright {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 @media screen and (min-width: 1024px) {
   .rodapé {
       display: flex;
       justify-content: space-around;
   }
-
-  .lista-rodapé {
-      display: block;
-  }
-
-  .lista-rodapé__item {
-      display: flex;
-      align-items: center;
-      margin: 0.6em 0;
-  }
-
-  .lista-rodapé__link {
-      color: var(--cinza);
-      text-decoration: none;
-      margin-left: 0.6em;
-  }
-
-  .lista-rodapé__titulo {
-      font-size: 14px;
-      color: var(--cinza-claro);
-  }
-
-  .rodapé__titulo {
-      font-size: 24px;
-  }
 }
 
 @media screen and (min-width: 1728px) {
-  .lista-rodapé {
-      border-left: 1px solid var(--cinza-claro);
-      padding-left: 1em;
-  }
-
   .rodapé {
       padding: 3em 0;
   }
